<resources>
    <string name="app_name">Xenia Teller</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">SETTINGS</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_signin">SigninActivity</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="googleapikey">AIzaSyDJ6wbuMgKlCG4hCFlYBuKha4AeV7PaxSs</string>
    <string name="googleprojectid">391226754417</string>
    <string name="facebook_app_id">886976498098633</string>
    <string name="banner_ad_footer">ca-app-pub-8123127367442961/9773585937</string>
    <string name="version">v2.1.1</string>
    <string name="LiveUrl">http://aploads.com/development/Taxi/index.php/userapi/</string>
    <string name="LiveUrl1">http://products.cogzidel.com/arcanemobile/drivers/</string>
    <string name="LiveUrl2">http://products.cogzidel.com/arcanemobile/administrator/</string>
    <string name="title_activity_payment">PaymentActivity</string>
    <string name="title_activity_payment_details">PaymentDetailsActivity</string>
    <string name="title_activity_scanactivity">SacnActivity</string>
    <string name="select"></string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="drawer_open">Slider Menu Opened</string>
    <string name="drawer_close">Slider Menu Closed</string>
    <string name="gcm_deleted">GCM: server deleted %1$d pending messages!</string>
    <string name="gcm_registered">GCM: device successfully registered!</string>
    <string name="gcm_unregistered">GCM: device successfully unregistered!</string>
    <string name="gcm_message">GCM: you got message!</string>
    <string name="gcm_error">GCM: error (%1$s).</string>
    <string name="gcm_recoverable_error">GCM: recoverable error (%1$s).</string>
    <string name="server_registering">Trying (attempt %1$d/%2$d) to register device on Demo Server.</string>
    <string name="server_registered">Demo Server: successfully added device!</string>
    <string name="server_unregistered">Demo Server: successfully removed device!</string>
    <string name="server_register_error">Could not register device on Demo Server after %1$d attempts.</string>
    <string name="server_unregister_error">Could not unregister device on Demo Server (%1$s).</string>
    <string name="contact_us">Contact Us</string>
    <string-array name="profile_list">
        <item>     Profile  </item>
        <item>     SOS </item>
        <item>     Trip History  </item>
        
        
        <item>     Share </item>
        <item>     Deactivate </item>
        <item>     Support</item>
        <item>     Wallet</item>
        <item>     Xenia Coin</item>
        <item>     Logout</item>
    </string-array>
    <string name="editprofile">EditProfile</string>
    <string name="desc_list_item_icon">Item Icon</string>
    <string name="CreditCardNumberHelp">Enter credit or debit card number</string>
    <string name="ExpirationDateHelp">Expiration date (MM/DD)</string>
    <string name="SecurityCodeHelp">Security code</string>
    <string name="ZipHelp">Zip code of billing address</string>
    <string name="title_activity_edit_profile">EditProfileActivity</string>
    <string name="title_activity_resetpassword">Resetpassword</string>
    <string name="title_activity_request">RequestActivity</string>
    <string name="title_activity_fare_review">FareReviewActivity</string>
    <string name="title_activity_pay_pal">PayPalActivity</string>
    <string name="title_activity_google_plus">GooglePlusActivity</string>
    <string name="title_activity_requestnext">RequestnextActivity</string>
    <string name="title_activity_regin_search">ReginSearchActivity</string>
    <string name="Credit_card">Credit/Debit Card</string>
    <string name="ADD_PAYMENT">Add Payment</string>
    <string name="trip_has_been_completed">Amount will be deducted once trip has been completed.</string>
    <string name="Cancel">Cancel</string>
    <string name="Done">Done</string>
    <string name="Comming_Soon">Comming Soon</string>
    <string name="Invite_to_Ride_Share">Invite to Ride Share</string>
    <string name="Send">Send</string>
    <string name="Last_Name">LAST NAME</string>
    <string name="Mobile">MOBILE</string>
    <string name="reg_Name">NAME</string>
    <string name="Password">PASSWORD</string>
    <string name="re_Password">CONFIRM PASSWORD</string>
    <string name="Account">Account</string>
    <string name="Email">EMAIL</string>
    <string name="PayPal_Email">PayPal Email</string>
    <string name="First_Name">FIRST NAME</string>
    <string name="verify_accoount">VERIFY PROFILE</string>
    <string name="PROFILE">Profile</string>
    <string name="Fare_Summary">Fare Summary</string>
    <string name="Amount_paid">Amount to be paid</string>
    <string name="$25">$25.00</string>
    <string name="Submit">Submit</string>
    <string name="Select_stars">Select 1-5 stars to rate your driver</string>
    <string name="Leave_command">Leave your command</string>
    <string name="Fare_Review">I need a Fare Review</string>
    <string name="Go_to_home">Go to Map</string>
    <string name="Promo">Promo</string>
    <string name="Fare_review">Fare Review</string>
    <string name="Trip_ID">Trip ID</string>
    <string name="Driver_ID">Driver ID</string>
    <string name="Pickup_Location">Pickup Location</string>
    <string name="Drop_Location">Drop Location</string>
    <string name="Total_Distance">Total Distance</string>
    <string name="Charge">Charge</string>
    <string name="Waiting_Charge">Waiting Charge</string>
    <string name="Tax">Tax</string>
    <string name="Total">Total</string>
    <string name="SIGN_IN">Sign In</string>
    <string name="REGISTER">Register</string>
    <string name="New_Password">NEW PASSWORD</string>
    <string name="Old_Password">CURRENT PASSWORD</string>
    <string name="Confirm_password">CONFIRM PASSWORD</string>
    <string name="Edit">Edit</string>
    <string name="Back">Back</string>
    <string name="REGION_SEARCH">Region Search</string>
    <string name="Enable_Region_Search">Enable Region Search</string>
    <string name="Next">Next</string>
    <string name="CREATE_AN_ACCOUNT">Create An Account</string>
    <string name="email_and_mobile_number_to_send_ride">We use your email id and mobile number to send ride confirmation and receipt.</string>
    <string name="Requesting">Requesting...</string>
    <string name="Cancel_Request">Cancel Request</string>
    <string name="REQUESTING">Requesting</string>
    <string name="Enter_destination">Enter your destination</string>
    <string name="Once_car_share_the_destination">Once you are in the car, we\'ll share the destination with your driver.</string>
    <string name="Email_Address">Email Address</string>
    <string name="RESET_PASSWORD">Reset Password</string>
    <string name="FORGOT_PASSWORD">Forgot Password</string>
    <string name="Enter_your_email_address">*Please enter your email address and we\'ll send you a new password</string>
    <string name="Enter_Place_Here">Enter Place Here</string>
    <string name="Contact1">CONTACT 1</string>
    <string name="Contact2">CONTACT 2</string>
    <string name="Contact3">CONTACT 3</string>
    <string name="Email1" />
    <string name="Emaill">EMAIL 1</string>
    <string name="Email2">EMAIL 2</string>
    <string name="UPDATE">UPDATE</string>
    <string name="Emergency_Email">EMERGENCY EMAILS</string>
    <string name="SETTINGS">Settings</string>
    <string name="Emergency_Contact">EMERGENCY CONTACTS</string>
    <string name="VERIFY_PROFILE">Verify Profile</string>
    <string name="PayPal_EmailAddress">PayPal Email Address</string>
    <string name="Mobile_Number">Mobile Number</string>
    <string name="SOS">SOS</string>
    <string name="WALLET">Coin Wallet</string>
    <string name="XENIA_COIN">XeniaCoin</string>
    <string name="XENIA_SIGNUP">SignUp</string>
    <string name="WALLET_ORDER">Order Prepaid Card</string>
    <string name="Alert_Email">Alert via Gmail</string>
    <string name="Alert_Facebook">Alert via Facebook</string>
    <string name="Settings">Settings</string>
    <string name="Alert_SMS">Alert via SMS</string>
    <string name="Staff_Details">Staff Details</string>
    <string name="Name">Name</string>
    <string name="Medium_Text">Medium Text</string>
    <string name="Age">Age</string>
    <string name="Gender">Gender</string>
    <string name="Experience">Experience</string>
    <string name="Invite_Split">Invite to Split</string>
    <string name="Search_contacts">Search contacts</string>
    <string name="Scan_a_credit_card_card.io">Scan a credit card with card.io</string>
    <string name="PayPal_Payment">PayPal Payment</string>
    <string name="Credit_Card_Payment">Credit Card Payment</string>
    <string name="Mercadopago_Payment">Mercadopago Payment</string>
    <string name="Cash_Hand">Cash on Hand</string>
    <string name="Invite_Ride_Share">Invite to Ride Share</string>
    <string name="Search_name">Search name</string>
    <string name="PICKUP_LOCATION">Pickup Location</string>
    <string name="Getting_location">Getting location</string>
    <string name="Driver_Name">Driver Name</string>
    <string name="Driver_Car">Driver Car</string>
    <string name="Rate">Rate</string>
    <string name="REQUEST">Request</string>
    <string name="Pickup_Minutes">Pickup Minutes</string>
    <string name="CANCEL">Cancel</string>
    <string name="CONFIRMATION">Confirmation</string>
    <string name="content">content</string>
    <string name="Hatchback">Hatchback</string>
    <string name="Sedan">Sedan</string>
    <string name="SUV">SUV</string>
    <string name="ETA">ETA</string>
    <string name="MAX_SIZE">Max Size</string>
    <string name="MIN_FARE">Min Fare</string>
    <string name="GET_FARE_ESTIMATE">Get Fare Estimate</string>
    <string name="SPLITING_1_WAY">Spliting Fare 1 Way</string>
    <string name="Accepted_RiderName">Accepted Rider Name</string>
    <string name="NOT_SPLITING">Not Spliting Fare</string>
    <string name="Not_Splited_RiderName">Not Splited Rider Name</string>
    <string name="DECLINE">Decline</string>
    <string name="ACCEPT">Accept</string>
    <string name="name_reg">NAME</string>
    <string name="with_name">with name</string>
    <string name="User_name">User name</string>
    <string name="Phone_no">Mobile No.</string>
    <string name="network_error">Network Connection Error...</string>
    <string name="please_connect">There is no network please connect</string>
    <string name="ok">Ok</string>
    <string name="waiting_cancel">Waiting for cancel from driver.</string>
    <string name="please_enter_your_valid_number">Enter valid mobile number</string>
    <string name="get_location">Getting location</string>
    <string name="fare_details">Fare Details</string>
    <string name="begin_trip">Begin Trip</string>
    <string name="begin_now">Your trip begin now.</string>
    <string name="trip_canceled">Trip cancelled</string>
    <string name="cancel_reason">"The trip cancelled by Driver due to "</string>
    <string name="xenia_wallet">"Xeniacoin ICO Pre-sale is on, get 30% bonus for a limited time.\nInvest in Coal mining/ Altcoins mining.\nThis is a token with with a payout!\nhttps://xeniacoin.org"</string>
    <string name="RobotoCondensed">RobotoCondensed-Regular.otf</string>
    <string name="join_us">JOIN US</string>
    <string name="join">JOIN</string>
    <string name="sign_in">Sign In</string>
    <string name="or_sign_up_with">Or Sign up with</string>
    <string name="facebook">Facebook</string>
    <string name="notification">Notification</string>
    <string name="whatsApp">+966 50 424 3072</string>
    <string name="emailId">info@sareeie.com</string>
    <string name="twitter">.@Sareeie3</string>
</resources>