<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="30dp"
    android:gravity="center"
    android:background="#33000000">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/bt_white"
        android:orientation="vertical">

        <com.custom.BTextView
            app:btextfont="@string/RobotoCondensed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:gravity="center"
            android:textSize="15sp"
            android:background="@color/yellow_color"
            android:textColor="@color/bt_black"
            android:text="@string/notification"/>


        <com.custom.BTextView
            app:btextfont="@string/RobotoCondensed"
            android:id="@+id/noti_dialog_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:gravity="center"
            android:textSize="14sp"
            android:text="@string/notification"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/bt_light_gray"/>

        <com.custom.BTextView
            app:btextfont="@string/RobotoCondensed"
            android:id="@+id/noti_dialog_ok"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:textStyle="bold"
            android:textSize="15sp"
            android:gravity="center"
            android:text="@string/ok"/>

    </LinearLayout>

</LinearLayout>